# TMC-Project

./: README.md
Sigali-2.4/: AAREADME  CMakeLists.txt  _config_  _config_bash  defs.cmake  sigaliEnv  sigaliEnv.sh
Sigali-2.4/CMakeModules/: FindDoxygen.cmake  FindpKMacros.cmake  LIB.cmake
Sigali-2.4/Synthesis/: CMakeLists.txt  _config_  defs.cmake  makeResolver
Sigali-2.4/Synthesis/Demos/: AAREADME.txt  SynthesisEnv
Sigali-2.4/Synthesis/Demos/AAREADME/: AAREADME.txt  Makefile  doxygenAAREADME  makeDoc
Sigali-2.4/Synthesis/Demos/AAREADME/html/: graph_legend.html  index.html
Sigali-2.4/Synthesis/Demos/AAREADME/latex/: doxygen.sty  index.tex  refman.aux  refman.tex  refman.toc
Sigali-2.4/Synthesis/Demos/AGV/: Makefile.win  makeLib.bat  run_demo  vt.PAR  vt.SIG  vt.SIG.SIG  vt.SIG_  vt.gpk  vt.res  vt.sim
Sigali-2.4/Synthesis/Demos/AGV/AAREADME/: doxygenAAREADME  modifs.txt
Sigali-2.4/Synthesis/Demos/AGV/AAREADME/html/: graph_legend.html  index.html  note.html  pages.html
Sigali-2.4/Synthesis/Demos/AGV/AAREADME/latex/: doxygen.sty  index.tex  note.tex  refman.tex
Sigali-2.4/Synthesis/Demos/AGV/Demo/: ChariotAGV.java  Feux.java  InteResolv.java  LiaisonBody.java  ListEntrees.java  Piece.java  PieceNum1.java  PieceNum2.java  PieceNum3.java  Plan.java  WST.java  vt.java
Sigali-2.4/Synthesis/Demos/AGV/Spec_Liaison.dir/: LiaisonBody.c  LiaisonBody_e.h
Sigali-2.4/Synthesis/Demos/AGV/vt/: vt.z3z  vt.z3z_  vt_CMD.z3z  vt_TRA.SIG  vt_body.c  vt_body.h  vt_externals.h  vt_externalsProc.h  vt_io.c  vt_main.c  vt_types.h
Sigali-2.4/Synthesis/Demos/CAT_MOUSE/: Makefile.win  Makefile_MacOs  SIGALI.SIG_  makeLib.bat  run_demo.bat  vt.PAR  vt.SIG  vt.SIG.SIG  vt.gpk  vt.res  vt.sim
Sigali-2.4/Synthesis/Demos/CAT_MOUSE/AAREADME/: AAREADME.txt  modifs.txt
Sigali-2.4/Synthesis/Demos/CAT_MOUSE/AAREADME/html/: graph_legend.html  index.html  note.html  pages.html
Sigali-2.4/Synthesis/Demos/CAT_MOUSE/AAREADME/latex/: doxygen.sty  note.tex  pages.tex  refman.tex
Sigali-2.4/Synthesis/Demos/CAT_MOUSE/Demo/: Animal.java  LiaisonBody.java  Plan.java  Porte.java  vt.java
Sigali-2.4/Synthesis/Demos/CAT_MOUSE/Spec_Liaison.dir/: LiaisonBody.c  LiaisonBody.h  LiaisonBody_e.h
Sigali-2.4/Synthesis/Demos/CAT_MOUSE/vt/: vt.res  vt.sim  vt.z3z  vt_CMD.z3z  vt_TRA.SIG  vt_body.c  vt_body.h  vt_externals.h  vt_externalsProc.h  vt_io.c  vt_main.c  vt_types.h
Sigali-2.4/Synthesis/Demos/COUNTER/2BITS_COUNTER/: Makefile  PATCH_FOR_DESYNCHRONIZATION  makeLib  makeLib.bat  run_demo  vt.SIG  vt.SIG.SIG  vt.gpk  vt.sim
Sigali-2.4/Synthesis/Demos/COUNTER/2BITS_COUNTER/Demo/: Entrees.java  InteResolv.java  LiaisonBody.java  ModesResolv.java  Plan.java  State.java  Update  vt.java
Sigali-2.4/Synthesis/Demos/COUNTER/2BITS_COUNTER/Spec_Liaison.dir/: LiaisonBody.c  (+1 more)
Sigali-2.4/Synthesis/Demos/COUNTER/4BITS_COUNTER/: compt4bit  run_demo  run_demo.bat  vt.SIG  vt.SIG.SIG  vt.gpk
Sigali-2.4/Synthesis/Demos/ImportSignal/: ansi.h  pK_ArrayCmp.h  pK_Complex.h  pK_Conv.h  pK_GenCodeC_Predef.h  pK_String.h  pK_stdio.h  pKio.h
Sigali-2.4/Synthesis/Demos/WATER_TANK/: makeLib  vt.SIG  vt.SIG.SIG  vt.gpk  vt.sim
Sigali-2.4/Synthesis/Demos/WATER_TANK/AAREADME/: doxygenAAREADME  modifs.txt
Sigali-2.4/Synthesis/Demos/WATER_TANK/Demo/: Flow.java  InteResolv.java  LiaisonBody.java  Plan.java  State.java  Update  Valve.java  vt.java
Sigali-2.4/Synthesis/Demos/WATER_TANK/Spec_Liaison.dir/: LiaisonBody.c  LiaisonBody_e.h
Sigali-2.4/Synthesis/Demos/WATER_TANK/vt/: vt.res  vt.z3z  vt_CMD.z3z  vt_TRA.SIG  vt_body.c  vt_externalsProc.h  vt_io.c  vt_types.h
Sigali-2.4/Synthesis/Demos/demo/Images.dir/: arm.fig  automata_control.fig  automata_control.fig.bak  excavation.eps  excavation.fig  excavation.fig.bak  excavation.ps  excavation2.fig  excavation2.fig.bak  opt_task.fig  opt_task2.eepic  opt_task2.fig  opt_task2.fig.bak  opt_task3.fig
Sigali-2.4/Synthesis/Demos/demo/Liaison.dir/: LiaisonPacemaker.c  LiaisonPacemaker.h  LiaisonPacemaker_e.h  LiaisonResolveur.c  LiaisonResolveur.h  commonj.c  commonj_e.h
Sigali-2.4/Synthesis/resolver/: CMakeLists.txt  _config_  defs.cmake  makeResolver.bash  makeResolver.bash~
Sigali-2.4/Synthesis/resolver/doc/: doc_demo.aux  doc_demo.dvi  doc_demo.tex  doc_demo.toc  doc_model.tex  doc_resolveur.aux  doc_resolveur.tex  doc_resolveur.tex.aux  doc_signal_moins.aux  doc_signal_moins.tex
Sigali-2.4/Synthesis/resolver/export/: configuration.h  equation.h  fonction.h  integer.h  memint.h  pointer.h  resolveur.h  tddresolv.h  tdduser.h  variable.h  z3z.h
Sigali-2.4/Synthesis/resolver/mem/: CMakeLists.txt  _config_  defs.cmake
Sigali-2.4/Synthesis/resolver/mem/export/: memuser.h
Sigali-2.4/Synthesis/resolver/res/: CMakeLists.txt  Makefile  _config_  configuration.c  defs.cmake  equation.c  fonction.c  random.c  resolveur.c  variable.c  z3z.c
Sigali-2.4/Synthesis/resolver/res/Work/: Makefile  configuration.cc  configuration.h  equation.cc  equation.h  fonction.cc  fonction.h  resolveur.cc  resolveur.h  tdddump_re.cc  testre  variable.cc  variable.h
Sigali-2.4/Synthesis/resolver/res/export/: configuration.h  equation.h  fonction.h  resolveur.h  variable.h  z3z.h
Sigali-2.4/Synthesis/resolver/tdd/: CMakeLists.txt  Makefile  _config_  defs.cmake  tdd.dump  tdd_redefined.c  tddmanager_re.c  tddresolve_re.c  tddundump.c
Sigali-2.4/Synthesis/resolver/tdd/export/: tddint-old.h  tddint.h  tddint.h~  tddresolv.h  tdduser.h
Sigali-2.4/Synthesis/resolver/tdd/test/: Makefile  tddtest_re.c
Sigali-2.4/Synthesis/resolver/test/: testre.c
Sigali-2.4/cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
Sigali-2.4/com/: echoErr  echoInf  echoWar
Sigali-2.4/doc/Doc_Sigali/: SigaliUser_manual.ps
Sigali-2.4/examples/: essai.z3z  std.ec  std.ec.itf  std.targos  std.z3z
Sigali-2.4/lib/: Implicit.lib  Optimal_Path_Synthesis.lib  Property.lib  S_max_liberte.lib  Synthesis.lib  Synthesis_Partial_Order_Relation.lib  Synthesis_Partial_Order_Relation.original.lib  Synthesis_Partial_order.lib  Verif_Implicit.lib  optimal_u.lib  optimal_uncontrollabel.lib  so.lib
(+520 files in other folders)
